# Battery-Monitor

./: CMakeLists.txt  README.md
include/: battery_engine.h
python/: server.py
python/web/: index.html
python/web/css/: style.css
python/web/js/: app.js  charts.js  viz3d.js
src/: battery_engine.cpp  bindings.cpp
